@@ -1,8 +1,9 @@
 SUBDIRS=\
-utils \
 bugs/array \
 bugs/bigdatabase \
 bugs/bigoql \
 bugs/quicktour \
+collections/implementation \
+jodl \
 optim/create \
-jodl 
+utils
